@@ -37,6 +37,8 @@ DDD 3.0 [in development]
     - Paned window management has been improved a lot.
     - DDD now works around a Motif 2.1/XFree86 bug that caused glyphs
       to disappear.  See the `cacheGlyphImages' resource for details.
+    - The `endless scrolling' problem may now be prevented by delaying
+      glyph updates.  See the `glyphUpdateDelay' resource for details.
     - One-letter options like `-b BPS' or `-x FILE' work again.
 
     Changes in configuration and building:
